@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2014 - 2023 LoboEvolution
+ * Copyright (c) 2014 - 2025 LoboEvolution
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -26,18 +26,21 @@
 
 package org.loboevolution.html.dom.nodeimpl;
 
+import lombok.Getter;
+import lombok.Setter;
 import org.htmlunit.cssparser.dom.DOMException;
 import org.htmlunit.cssparser.parser.selector.Selector;
 import org.htmlunit.cssparser.parser.selector.SelectorList;
+import org.loboevolution.common.ArrayUtilities;
 import org.loboevolution.common.Nodes;
 import org.loboevolution.common.Strings;
 import org.loboevolution.config.HtmlRendererConfig;
 import org.loboevolution.gui.HtmlRendererContext;
 import org.loboevolution.html.CSSValues;
+import org.loboevolution.html.HTMLTag;
 import org.loboevolution.html.dom.*;
 import org.loboevolution.html.dom.domimpl.*;
 import org.loboevolution.html.dom.filter.*;
-import org.loboevolution.html.dom.nodeimpl.event.GlobalEventHandlersImpl;
 import org.loboevolution.html.dom.nodeimpl.traversal.NodeIteratorImpl;
 import org.loboevolution.html.dom.nodeimpl.traversal.TreeWalkerImpl;
 import org.loboevolution.html.dom.xpath.XPathEvaluatorImpl;
@@ -46,12 +49,13 @@ import org.loboevolution.html.io.WritableLineReader;
 import org.loboevolution.html.js.WindowImpl;
 import org.loboevolution.html.js.events.EventFactory;
 import org.loboevolution.html.node.*;
-import org.loboevolution.html.node.events.Event;
-import org.loboevolution.html.node.js.Location;
-import org.loboevolution.html.node.js.Window;
-import org.loboevolution.html.node.traversal.NodeFilter;
-import org.loboevolution.html.node.traversal.NodeIterator;
-import org.loboevolution.html.node.traversal.TreeWalker;
+import org.loboevolution.events.Event;
+import org.loboevolution.html.node.ranges.Range;
+import org.loboevolution.js.Location;
+import org.loboevolution.js.Window;
+import org.loboevolution.traversal.NodeFilter;
+import org.loboevolution.traversal.NodeIterator;
+import org.loboevolution.traversal.TreeWalker;
 import org.loboevolution.html.style.CSSUtilities;
 import org.loboevolution.html.style.StyleSheetAggregator;
 import org.loboevolution.html.xpath.XPathEvaluator;
@@ -65,12 +69,13 @@ import org.loboevolution.type.VisibilityState;
 import java.io.IOException;
 import java.io.LineNumberReader;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Stream;
 
 /**
  * <p>DocumentImpl class.</p>
  */
-public class DocumentImpl extends GlobalEventHandlersImpl implements Document, XPathEvaluator {
+public class DocumentImpl extends NodeImpl implements Document, XPathEvaluator {
 
 	private boolean strictErrorChecking = true;
 
@@ -80,6 +85,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	private boolean isrss = false;
 
+	@Getter
+	@Setter
 	private boolean test = false;
 
 	private String xmlVersion = null;
@@ -90,11 +97,11 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	private String domain;
 
+	@Getter
+	@Setter
 	private String referrer;
 
-	private DocumentType doctype;
-
-	private HTMLElement body;
+    private HTMLElement body;
 
 	private Window window;
 
@@ -102,7 +109,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Node adoptNode(Node source) {
+	public Node adoptNode(final Node source) {
 
 		if (source instanceof DocumentType || Objects.equals(this, source)) {
 			throw new DOMException(DOMException.NOT_SUPPORTED_ERR, "Unknwon node implementation");
@@ -113,14 +120,13 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 			throw new DOMException(DOMException.NO_MODIFICATION_ALLOWED_ERR, "readonly node");
 		}
 
-
-		NodeImpl node = (NodeImpl) source;
+		final NodeImpl node = (NodeImpl) source;
 		node.setOwnerDocument(this.document, true);
 		return node;
 	}
 
 	@Override
-	public Node renameNode(Node node, String namespaceURI, String qualifiedName) {
+	public Node renameNode(final Node node, final String namespaceURI, final String qualifiedName) {
 		if (node instanceof Attr) {
 			return createAttributeNS(namespaceURI, qualifiedName);
 		}
@@ -134,8 +140,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Element createElement(String tagName) {
-
+	public Element createElement(final String tn) {
+		String tagName = tn;
 		if (Strings.isNotBlank(tagName) && tagName.equals(":")) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name contains the invalid character");
 		}
@@ -154,12 +160,12 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 		if ("rss".equalsIgnoreCase(tagName)) {
 			isrss = true;
 		}
-		return new ElementFactory(isrss).createElement((HTMLDocumentImpl) this, tagName);
+		return new ElementFactory(isrss).createElement((HTMLDocumentImpl) this, tagName.toUpperCase());
 	}
 
 	@Override
-	public EntityReference createEntityReference(String entity) {
-		EntityReferenceImpl entityReference = new EntityReferenceImpl();
+	public EntityReference createEntityReference(final String entity) {
+		final EntityReferenceImpl entityReference = new EntityReferenceImpl();
 		entityReference.setNodeName(entity);
 		entityReference.setOwnerDocument(this);
 		return entityReference;
@@ -167,8 +173,10 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Element createElementNS(String namespaceURI, String qualifiedName) {
+	public Element createElementNS(final String nUri, final String qName) {
 		String prefix = null;
+		final String qualifiedName = qName;
+		String namespaceURI = nUri;
 
 		if (Strings.isBlank(qualifiedName)) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name contains the invalid character");
@@ -180,7 +188,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 				throw new DOMException(DOMException.NAMESPACE_ERR, "The qualified name provided has error.");
 			}
 
-			String[] split = qualifiedName.split(":");
+			final String[] split = qualifiedName.split(":");
 			if (split.length != 2) {
 				throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name provided has an empty local name.");
 			}
@@ -211,7 +219,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 				}
 			}
 		}
-		ElementImpl elem = (ElementImpl) new ElementFactory(false).createElement((HTMLDocumentImpl) this, qualifiedName);
+		final ElementImpl elem = (ElementImpl) new ElementFactory(false).createElement((HTMLDocumentImpl) this, qualifiedName);
 		elem.setNamespaceURI(namespaceURI);
 		if (Strings.isNotBlank(prefix) && Strings.isNotBlank(namespaceURI)) {
 			elem.setPrefix(prefix);
@@ -221,7 +229,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Element createElementNS(String namespaceURI, String qualifiedName, String options) {
+	public Element createElementNS(final String namespaceURI, final String qualifiedName, final String options) {
 		if (Strings.isBlank(qualifiedName) || !Strings.isXMLIdentifier(qualifiedName)) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name contains the invalid character");
 		}
@@ -237,13 +245,13 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public HTMLCollection getElementsByClassName(String classNames) {
+	public HTMLCollection getElementsByClassName(final String classNames) {
 		return new HTMLCollectionImpl(this, new ClassNameFilter(classNames));
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public HTMLCollection getElementsByTagName(String tagname) {
+	public HTMLCollection getElementsByTagName(final String tagname) {
 		if ("*".equals(tagname)) {
 			return new HTMLCollectionImpl(this, new ElementFilter(null));
 		} else {
@@ -253,7 +261,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public HTMLCollection getElementsByTagNameNS(String namespaceURI, String localName) {
+	public HTMLCollection getElementsByTagNameNS(final String namespaceURI, final String localName) {
 
 		if("*".equals(namespaceURI) && "*".equals(localName)) {
 			return new HTMLCollectionImpl(this, new ElementFilter(null));
@@ -271,8 +279,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	/** {@inheritDoc} */
 	@Override
 	public Element getLastElementChild() {
-		long count = nodeList.stream().filter(n -> n instanceof Element).count();
-		Stream<Node> stream = nodeList.stream();
+		final long count = nodeList.stream().filter(n -> n instanceof Element).count();
+		final Stream<Node> stream = nodeList.stream();
 		return (Element) stream.filter(n -> n instanceof Element).skip(count - 1).findFirst().orElse(null);
 	}
 
@@ -288,29 +296,29 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Element querySelector(String selectors) {
+	public Element querySelector(final String selectors) {
 		try {
-			SelectorList selectorList = CSSUtilities.getSelectorList(selectors);
-			List<Element> elem = new ArrayList<>();
+			final SelectorList selectorList = CSSUtilities.getSelectorList(selectors);
+			final List<Element> elem = new ArrayList<>();
 			if (selectorList != null) {
-				NodeListImpl childNodes = (NodeListImpl) getDescendents(new ElementFilter(null), true);
+				final NodeListImpl childNodes = (NodeListImpl) getDescendents(new ElementFilter(null), true);
 				childNodes.forEach(child -> {
-					for (Selector selector : selectorList) {
+					for (final Selector selector : selectorList) {
 						if (child instanceof Element && StyleSheetAggregator.selects(selector, child, null)) {
 							elem.add((Element) child);
 						}
 					}
 				});
 			}
-			return elem.size() > 0 ? elem.get(0) : null;
-		} catch (Exception e) {
+			return ArrayUtilities.isNotBlank(elem) ? elem.getFirst() : null;
+		} catch (final Exception e) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "Is not a valid selector.");
 		}
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public NodeList querySelectorAll(String selector) {
+	public NodeList querySelectorAll(final String selector) {
 
 		final ArrayList<Node> al = new ArrayList<>();
 
@@ -327,11 +335,11 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 		}
 
 		try {
-			SelectorList selectorList = CSSUtilities.getSelectorList(selector);
+			final SelectorList selectorList = CSSUtilities.getSelectorList(selector);
 			if (selectorList != null) {
-				NodeListImpl childNodes = (NodeListImpl) getDescendents(new ElementFilter(null), true);
+				final NodeListImpl childNodes = (NodeListImpl) getDescendents(new ElementFilter(null), true);
 				childNodes.forEach(child -> {
-					for (Selector select : selectorList) {
+					for (final Selector select : selectorList) {
 						if (child instanceof Element && StyleSheetAggregator.selects(select, child, null)) {
 							al.add(child);
 						}
@@ -340,7 +348,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 			}
 			return new NodeListImpl(al);
 
-		} catch (Exception e) {
+		} catch (final Exception e) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "Is not a valid selector.");
 		}
 	}
@@ -350,13 +358,11 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	 */
 	@Override
 	public DocumentType getDoctype() {
-		doctype = (DocumentType) nodeList.
-				stream().
-				filter(node -> node.getNodeType() == Node.DOCUMENT_TYPE_NODE).
-				findFirst().
-				orElse(new DocumentTypeImpl());
-
-		return this.doctype;
+        return (DocumentType) nodeList.
+                stream().
+                filter(node -> node.getNodeType() == Node.DOCUMENT_TYPE_NODE).
+                findFirst().
+                orElse(new DocumentTypeImpl());
 	}
 
 	/**
@@ -364,7 +370,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	 *
 	 * @param doctype a {@link org.loboevolution.html.node.DocumentType} object.
 	 */
-	public void setDoctype(DocumentType doctype) {
+	public void setDoctype(final DocumentType doctype) {
 		if (doctype != null) {
 			nodeList.add(doctype);
 		}
@@ -373,7 +379,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	/** {@inheritDoc} */
 	@Override
 	public Element getDocumentElement() {
-		for (Node node : nodeList) {
+		for (final Node node : nodeList) {
 			if (node.getNodeType() == Node.ELEMENT_NODE) {
 				return (Element) node;
 			}
@@ -383,7 +389,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Text createTextNode(String data) {
+	public Text createTextNode(final String data) {
 		if (data == null) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "null data");
 		}
@@ -396,25 +402,27 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	 * {@inheritDoc}
 	 */
 	@Override
-	public Attr createAttribute(String name) {
+	public Attr createAttribute(final String name) {
 		if (!Strings.isXMLIdentifier(name)) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name contains the invalid character");
 		}
-		AttrImpl attr = new AttrImpl(name, null, "id".equalsIgnoreCase(name), null, true);
+		final AttrImpl attr = new AttrImpl(name, null, "id".equalsIgnoreCase(name), null, true);
 		attr.setOwnerDocument(this);
 		return attr;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Attr createAttributeNS(String namespaceURI, String qualifiedName) throws DOMException {
+	public Attr createAttributeNS(final String nUri, final String qName) throws DOMException {
 		String prefix = null;
+		String qualifiedName = qName;
+		final String namespaceURI = nUri;
 		if (Strings.isBlank(qualifiedName)) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The qualified name contains the invalid character");
 		}
 
 		if (qualifiedName.contains(":")) {
-			String[] split = qualifiedName.split(":");
+			final String[] split = qualifiedName.split(":");
 			if (split.length != 2) {
 				throw new DOMException(DOMException.NAMESPACE_ERR, "The qualified name provided has an empty local name.");
 			}
@@ -437,7 +445,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 			throw new DOMException(DOMException.NAMESPACE_ERR, "xmlns local name but not xmlns namespace");
 		}
 
-		AttrImpl attr = new AttrImpl(qualifiedName, null, "id".equalsIgnoreCase(qualifiedName), null, true);
+		final AttrImpl attr = new AttrImpl(qualifiedName, null, "id".equalsIgnoreCase(qualifiedName), null, true);
 		attr.setNamespaceURI(namespaceURI);
 		attr.setOwnerDocument(this);
 		if (Strings.isNotBlank(prefix)) {
@@ -448,22 +456,22 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public CDATASection createCDATASection(String data) {
+	public CDATASection createCDATASection(final String data) {
 		if (data == null) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "null data");
 		}
-		CDataSectionImpl node = new CDataSectionImpl(data);
+		final CDataSectionImpl node = new CDataSectionImpl(data);
 		node.setOwnerDocument(this.document);
 		return node;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Comment createComment(String data) {
+	public Comment createComment(final String data) {
 		if (data == null) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "null data");
 		}
-		CommentImpl node = new CommentImpl(data);
+		final CommentImpl node = new CommentImpl(data);
 		node.setOwnerDocument(this.document);
 		return node;
 	}
@@ -478,7 +486,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public ProcessingInstruction createProcessingInstruction(String target, String data) {
+	public ProcessingInstruction createProcessingInstruction(final String target, final String data) {
 
 		if (!Strings.isXMLIdentifier(target)) {
 			throw new DOMException(DOMException.INVALID_CHARACTER_ERR, "The target contains the invalid character");
@@ -509,8 +517,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Element getElementById(String elementId) {
-		NodeList nodeList = getNodeList(new IdFilter(elementId));
+	public Element getElementById(final String elementId) {
+		final NodeList nodeList = getNodeList(new IdFilter(elementId));
 		return nodeList != null && nodeList.getLength() > 0 ? (Element)nodeList.item(0) : null;
 	}
 
@@ -528,7 +536,13 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setDocumentURI(String documentURI) {
+	public String getBaseURI() {
+		return this.documentURI;
+	}
+
+	/** {@inheritDoc} */
+	@Override
+	public void setDocumentURI(final String documentURI) {
 		this.documentURI = documentURI;
 	}
 
@@ -558,7 +572,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setStrictErrorChecking(boolean strictErrorChecking) {
+	public void setStrictErrorChecking(final boolean strictErrorChecking) {
 		this.strictErrorChecking = strictErrorChecking;
 	}
 
@@ -576,44 +590,44 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setXmlStandalone(boolean xmlStandalone) {
+	public void setXmlStandalone(final boolean xmlStandalone) {
 		this.xmlStandalone = xmlStandalone;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public void setXmlVersion(String xmlVersion) {
+	public void setXmlVersion(final String xmlVersion) {
 		this.xmlVersion = xmlVersion;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Event createEvent(String eventType) {
+	public Event createEvent(final String eventType) throws DOMException {
 		return EventFactory.createEvent(eventType);
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public XPathExpression createExpression(String expression, XPathNSResolver resolver) {
-		XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
+	public XPathExpression createExpression(final String expression, final XPathNSResolver resolver) {
+		final XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
 		return evaluator.createExpression(expression, resolver);
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public XPathNSResolver createNSResolver(Node nodeResolver) {
-		XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
+	public XPathNSResolver createNSResolver(final Node nodeResolver) {
+		final XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
 		return evaluator.createNSResolver(nodeResolver);
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public XPathResult evaluate(String expression, Node contextNode, XPathNSResolver resolver, short type, Object result) {
+	public XPathResult evaluate(final String expression, final Node contextNode, final XPathNSResolver resolver, final short type, final Object result) {
 		return eval(expression, contextNode, resolver, type, result);
 	}
 
-	private XPathResult eval(String expression, Node contextNode, XPathNSResolver resolver, short type, Object result) {
-		XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
+	private XPathResult eval(final String expression, final Node contextNode, final XPathNSResolver resolver, final short type, final Object result) {
+		final XPathEvaluatorImpl evaluator = new XPathEvaluatorImpl(document);
 		return (XPathResult) evaluator.evaluate(expression, contextNode, resolver, type, result);
 	}
 
@@ -633,39 +647,41 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	/** {@inheritDoc} */
 	@Override
 	public Element getActiveElement() {
-		// TODO Auto-generated method stub
-		return null;
-	}
+		HTMLCollectionImpl collection = (HTMLCollectionImpl) getElementsByTagName(HTMLTag.INPUT.name());
+		AtomicReference<Element> rNpde = new AtomicReference<>(null);
+		collection.forEach(elem -> {
+			HTMLInputElementImpl input = (HTMLInputElementImpl) elem;
+			if (input.isFocusable()) {
+				rNpde.set((Element) elem);
+			}
+		});
 
-	/** {@inheritDoc} */
-	@Override
-	public String getAlinkColor() {
-		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
-		return body.getALink();
-	}
+		if (rNpde.get() == null) {
+			collection = (HTMLCollectionImpl) getElementsByTagName(HTMLTag.TEXTAREA.name());
+			collection.forEach(elem -> {
+				HTMLTextAreaElementImpl input = (HTMLTextAreaElementImpl) elem;
+				if (input.isFocusable()) {
+					rNpde.set((Element) elem);
+				}
+			});
+		}
 
-	/** {@inheritDoc} */
-	@Override
-	public void setAlinkColor(String alinkColor) {
-		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
-		body.setALink(alinkColor);
+		return rNpde.get();
 	}
 
 	/** {@inheritDoc} */
 	@Override
 	public String getBgColor() {
 		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
+		final HTMLBodyElement body = (HTMLBodyElement) elem;
 		return body.getBgColor();
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public void setBgColor(String bgColor) {
+	public void setBgColor(final String bgColor) {
 		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
+		final HTMLBodyElement body = (HTMLBodyElement) elem;
 		body.setBgColor(bgColor);
 	}
 
@@ -686,7 +702,32 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	/** {@inheritDoc} */
 	@Override
 	public String getCompatMode() {
-		return (getDoctype() != null && getDoctype().getName() != null) ? CSSValues.CSS1COMPAT.getValue() : CSSValues.BACKCOMPAT.getValue();
+		final DocumentType docType = getDoctype();
+		if (docType != null) {
+			final String systemId = docType.getSystemId();
+			final String publicId = docType.getPublicId();
+			if (systemId != null) {
+				if ("http://www.w3.org/TR/html4/strict.dtd".equals(systemId)) {
+					return CSSValues.CSS1COMPAT.getValue();
+				}
+
+				if ("http://www.w3.org/TR/html4/loose.dtd".equals(systemId)) {
+					if ("-//W3C//DTD HTML 4.01 Transitional//EN".equals(publicId)) {
+						return CSSValues.CSS1COMPAT.getValue();
+					}
+				}
+
+				if ("http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd".equals(systemId)
+						|| "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd".equals(systemId)) {
+					return CSSValues.CSS1COMPAT.getValue();
+				}
+			}
+
+			if (Strings.isBlank(publicId)) {
+				return docType.getName() == null ? CSSValues.BACKCOMPAT.getValue() : CSSValues.CSS1COMPAT.getValue();
+			}
+		}
+		return CSSValues.BACKCOMPAT.getValue();
 	}
 
 	/** {@inheritDoc} */
@@ -705,7 +746,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setCookie(String cookie) {
+	public void setCookie(final String cookie) {
 		// TODO Auto-generated method stub
 
 	}
@@ -722,7 +763,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	public Window getDefaultView() {
 		return this.window;
 	}
-	public void setWindow(final HtmlRendererContext rcontext, final UserAgentContext ucontext, HtmlRendererConfig config){
+
+	public void setWindow(final HtmlRendererContext rcontext, final UserAgentContext ucontext, final HtmlRendererConfig config){
 		if (rcontext != null) {
 			window = WindowImpl.getWindow(rcontext, config);
 		} else {
@@ -739,7 +781,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setDesignMode(String designMode) {
+	public void setDesignMode(final String designMode) {
 		// TODO Auto-generated method stub
 
 	}
@@ -753,7 +795,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setDir(String dir) {
+	public void setDir(final String dir) {
 		// TODO Auto-generated method stub
 
 	}
@@ -766,7 +808,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setDomain(String domain) {
+	public void setDomain(final String domain) {
 		this.domain = domain;
 	}
 
@@ -774,15 +816,15 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	@Override
 	public String getFgColor() {
 		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
+		final HTMLBodyElement body = (HTMLBodyElement) elem;
 		return body.getText();
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public void setFgColor(String fgColor) {
+	public void setFgColor(final String fgColor) {
 		final HTMLElement elem = getBody();
-		HTMLBodyElement body = (HTMLBodyElement) elem;
+		final HTMLBodyElement body = (HTMLBodyElement) elem;
 		body.setText(fgColor);
 	}
 
@@ -811,7 +853,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	@Override
 	public HTMLHeadElement getHead() {
 		synchronized (this) {
-			HTMLCollection collection =  new HTMLCollectionImpl(this, new HeadFilter());
+			final HTMLCollection collection =  new HTMLCollectionImpl(this, new HeadFilter());
 			if(collection.getLength() > 0) return (HTMLHeadElement)collection.item(0);
 			else return null;
 		}
@@ -822,7 +864,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	public HTMLElement getBody() {
 		synchronized (this) {
 			if(this.body != null) return this.body;
-			HTMLCollection collection =  new HTMLCollectionImpl(this, new HeadFilter());
+			final HTMLCollection collection =  new HTMLCollectionImpl(this, new HeadFilter());
 			if(collection.getLength() > 0) return (HTMLElement) collection.item(0);
 			else return null;
 		}
@@ -830,7 +872,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setBody(HTMLElement body) {
+	public void setBody(final HTMLElement body) {
 		this.body = body;
 	}
 
@@ -903,14 +945,14 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public HTMLAllCollection getAll() {
+	public HTMLAllCollection getall() {
 		final List<Node> list = new LinkedList<>(Arrays.asList(this.getNodeList(new ElementFilter(null)).toArray()));
 		return new HTMLAllCollectionImpl(this, list);
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public HTMLCollection getElementsByName(String elementName) {
+	public HTMLCollection getElementsByName(final String elementName) {
 		return new HTMLCollectionImpl(this, new ElementNameFilter(elementName));
 	}
 
@@ -929,7 +971,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void setLocation(Location location) {
+	public void setLocation(final Location location) {
 		getDefaultView().setLocation(location);
 	}
 
@@ -949,21 +991,6 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public String getReferrer() {
-		return this.referrer;
-	}
-
-	/**
-	 * <p>Setter for the field referrer.</p>
-	 *
-	 * @param value a {@link java.lang.String} object.
-	 */
-	public void setReferrer(String value) {
-		this.referrer = value;
-	}
-
-	/** {@inheritDoc} */
-	@Override
 	public Element getScrollingElement() {
 		// TODO Auto-generated method stub
 		return null;
@@ -972,12 +999,12 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	/** {@inheritDoc} */
 	@Override
 	public String getTitle() {
-		return this.title;
+		return this.title != null ? this.title : "";
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public void setTitle(String title) {
+	public void setTitle(final String title) {
 		this.title = title;
 	}
 
@@ -990,14 +1017,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void captureEvents() {
-		// TODO Auto-generated method stub
-
-	}
-
-	/** {@inheritDoc} */
-	@Override
-	public Range caretRangeFromPoint(double x, double y) {
+	public Range caretRangeFromPoint(final double x, final double y) {
 		// TODO Auto-generated method stub
 		return null;
 	}
@@ -1016,7 +1036,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 			if (this.reader instanceof LocalWritableLineReader) {
 				try {
 					this.reader.close();
-				} catch (IOException ioe) {
+				} catch (final IOException ioe) {
 					// ignore
 				}
 				this.reader = null;
@@ -1026,76 +1046,75 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 
 	@Override
-	public NodeIterator createNodeIterator(Node root) throws DOMException {
+	public NodeIterator createNodeIterator(final Node root) throws DOMException {
 		return new NodeIteratorImpl(root, 0,  null);
 	}
 
 	@Override
-	public NodeIterator createNodeIterator(Node root, int whatToShow) throws DOMException {
+	public NodeIterator createNodeIterator(final Node root, final int whatToShow) throws DOMException {
 		return new NodeIteratorImpl(root, whatToShow, null);
 	}
 
 	@Override
-	public NodeIterator createNodeIterator(Node root, NodeFilter filter) throws DOMException {
+	public NodeIterator createNodeIterator(final Node root, final NodeFilter filter) throws DOMException {
 		return new NodeIteratorImpl(root, 0, filter);
 	}
 
 	@Override
-	public NodeIterator createNodeIterator(Node root, int whatToShow, NodeFilter filter) throws DOMException {
+	public NodeIterator createNodeIterator(final Node root, final int whatToShow, final NodeFilter filter) throws DOMException {
 		return new NodeIteratorImpl(root, whatToShow, filter);
 	}
 
 	/** {@inheritDoc} */
 	@Override
 	public Range createRange() {
-		// TODO Auto-generated method stub
-		return null;
+		return new RangeImpl(this);
 	}
 
 	@Override
-	public TreeWalker createTreeWalker(Node root) throws DOMException {
+	public TreeWalker createTreeWalker(final Node root) throws DOMException {
 		return new TreeWalkerImpl(root, 0, null);
 	}
 
 	@Override
-	public TreeWalker createTreeWalker(Node root, int whatToShow) throws DOMException {
+	public TreeWalker createTreeWalker(final Node root, final int whatToShow) throws DOMException {
 		return new TreeWalkerImpl(root, whatToShow, null);
 	}
 
 	@Override
-	public TreeWalker createTreeWalker(Node root, NodeFilter filter) throws DOMException {
+	public TreeWalker createTreeWalker(final Node root, final NodeFilter filter) throws DOMException {
 		return new TreeWalkerImpl(root, 0, filter);
 	}
 
 	@Override
-	public TreeWalker createTreeWalker(Node root, int whatToShow, NodeFilter filter) throws DOMException {
+	public TreeWalker createTreeWalker(final Node root, final int whatToShow, final NodeFilter filter) throws DOMException {
 		return new TreeWalkerImpl(root, whatToShow, filter);
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Element elementFromPoint(double x, double y) {
+	public Element elementFromPoint(final double x, final double y) {
 		// TODO Auto-generated method stub
 		return null;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean execCommand(String commandId, boolean showUI, String value) {
+	public boolean execCommand(final String commandId, final boolean showUI, final String value) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean execCommand(String commandId, boolean showUI) {
+	public boolean execCommand(final String commandId, final boolean showUI) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean execCommand(String commandId) {
+	public boolean execCommand(final String commandId) {
 		// TODO Auto-generated method stub
 		return false;
 	}
@@ -1116,10 +1135,10 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Node importNode(Node importedNode, boolean deep) throws DOMException {
+	public Node importNode(final Node importedNode, final boolean deep) throws DOMException {
 		switch (importedNode.getNodeType()) {
 			case ATTRIBUTE_NODE:
-				Attr attr;
+				final Attr attr;
 				if (Strings.isNotBlank(importedNode.getNamespaceURI())) {
 					attr = createAttributeNS(importedNode.getNamespaceURI(), importedNode.getNodeName());
 				} else {
@@ -1128,8 +1147,8 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 				attr.setValue(importedNode.getNodeValue());
 				return attr;
 			case ELEMENT_NODE:
-				Element foreignElm = (Element) importedNode;
-				Element elm;
+				final Element foreignElm = (Element) importedNode;
+				final Element elm;
 
 				if (Strings.isNotBlank(foreignElm.getNamespaceURI())) {
 					elm = createElementNS(foreignElm.getNamespaceURI(), foreignElm.getNodeName());
@@ -1137,10 +1156,10 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 					elm = createElement(foreignElm.getNodeName());
 				}
 
-				NamedNodeMap attributes = foreignElm.getAttributes();
-				for (Node attribute : Nodes.iterable(attributes)) {
+				final NamedNodeMap attributes = foreignElm.getAttributes();
+				for (final Node attribute : Nodes.iterable(attributes)) {
 					if (!"xmlns".equals(attribute.getNodeName())) {
-						Attr attrNode = (Attr) importNode(attribute, true);
+						final Attr attrNode = (Attr) importNode(attribute, true);
 						elm.setAttributeNode(attrNode);
 					}
 				}
@@ -1159,7 +1178,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 			case COMMENT_NODE:
 				return createComment(importedNode.getNodeValue());
 			case DOCUMENT_FRAGMENT_NODE:
-				DocumentFragment df = createDocumentFragment();
+				final DocumentFragment df = createDocumentFragment();
 				if (deep) {
 					Node node = importedNode.getFirstChild();
 					while (node != null) {
@@ -1172,12 +1191,12 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 				return createProcessingInstruction(importedNode.getNodeName(), importedNode.getNodeValue());
 			case ENTITY_REFERENCE_NODE:
 				getDoctype().getEntities().setNamedItem(importedNode);
-				EntityReferenceImpl reference = (EntityReferenceImpl) importedNode;
+				final EntityReferenceImpl reference = (EntityReferenceImpl) importedNode;
 				reference.setOwnerDocument(this);
 				return reference;
 			case NOTATION_NODE:
 				getDoctype().getNotations().setNamedItem(importedNode);
-				NotationImpl notation = (NotationImpl) importedNode;
+				final NotationImpl notation = (NotationImpl) importedNode;
 				notation.setOwnerDocument(this);
 				return notation;
 			default:
@@ -1187,25 +1206,25 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public Document open(String url, String name, String features, boolean replace) {
+	public Document open(final String url, final String name, final String features, final boolean replace) {
 		return open();
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Document open(String url, String name, String features) {
+	public Document open(final String url, final String name, final String features) {
 		return open();
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Document open(String url, String name) {
+	public Document open(final String url, final String name) {
 		return open();
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public Document open(String url) {
+	public Document open(final String url) {
 		return open();
 	}
 
@@ -1240,35 +1259,35 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean queryCommandEnabled(String commandId) {
+	public boolean queryCommandEnabled(final String commandId) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean queryCommandIndeterm(String commandId) {
+	public boolean queryCommandIndeterm(final String commandId) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean queryCommandState(String commandId) {
+	public boolean queryCommandState(final String commandId) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public boolean queryCommandSupported(String commandId) {
+	public boolean queryCommandSupported(final String commandId) {
 		// TODO Auto-generated method stub
 		return false;
 	}
 
 	/** {@inheritDoc} */
 	@Override
-	public String queryCommandValue(String commandId) {
+	public String queryCommandValue(final String commandId) {
 		// TODO Auto-generated method stub
 		return null;
 	}
@@ -1282,7 +1301,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void write(String text) {
+	public void write(final String text) {
 		synchronized (this) {
 			if (this.reader != null) {
 				try {
@@ -1297,7 +1316,7 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 
 	/** {@inheritDoc} */
 	@Override
-	public void writeln(String text) {
+	public void writeln(final String text) {
 		synchronized (this) {
 			if (this.reader != null) {
 				try {
@@ -1323,15 +1342,32 @@ public class DocumentImpl extends GlobalEventHandlersImpl implements Document, X
 	}
 
 	@Override
-	public void setXml(boolean xml) {
+	public void setXml(final boolean xml) {
 		this.xml = xml;
 	}
 
-	public boolean isTest() {
-		return test;
+	@Override
+	public String getLocalName() {
+		return "";
 	}
 
-	public void setTest(boolean test) {
-		this.test = test;
+	@Override
+	public int getNodeType() {
+		return Node.DOCUMENT_NODE;
+	}
+
+	@Override
+	public String getNodeValue() throws DOMException {
+		return null;
+	}
+
+	@Override
+	public void setNodeValue(String nodeValue) throws DOMException {
+		throw new DOMException(DOMException.INVALID_MODIFICATION_ERR, "readonly node");
+	}
+
+	@Override
+	public String getNodeName() {
+		return "[object HTMLDocument]";
 	}
 }
