@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2014 - 2023 LoboEvolution
+ * Copyright (c) 2014 - 2025 LoboEvolution
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -47,7 +47,7 @@ public class XNumber extends XObject {
    *
    * @param d Value of the object
    */
-  public XNumber(double d) {
+  public XNumber(final double d) {
     super();
 
     m_val = d;
@@ -73,7 +73,7 @@ public class XNumber extends XObject {
 
   /** {@inheritDoc} */
   @Override
-  public double num(XPathContext xctxt) throws org.loboevolution.javax.xml.transform.TransformerException {
+  public double num(final XPathContext xctxt) throws javax.xml.transform.TransformerException {
 
     return m_val;
   }
@@ -98,7 +98,7 @@ public class XNumber extends XObject {
     }
 
     String s = Double.toString(m_val);
-    int len = s.length();
+    final int len = s.length();
 
     if (s.charAt(len - 2) == '.' && s.charAt(len - 1) == '0') {
       s = s.substring(0, len - 2);
@@ -117,8 +117,8 @@ public class XNumber extends XObject {
       return s;
     }
 
-    int exp = Integer.parseInt(s.substring(e + 1));
-    String sign;
+    final int exp = Integer.parseInt(s.substring(e + 1));
+    final String sign;
 
     if (s.charAt(0) == '-') {
       sign = "-";
@@ -127,7 +127,7 @@ public class XNumber extends XObject {
       --e;
     } else sign = "";
 
-    int nDigits = e - 2;
+    final int nDigits = e - 2;
 
     if (exp >= nDigits) return sign + s.substring(0, 1) + s.substring(2, e) + zeros(exp - nDigits);
 
@@ -146,10 +146,10 @@ public class XNumber extends XObject {
    * @param n Length of the string to be returned
    * @return a string of '0' with the given length
    */
-  private static String zeros(int n) {
+  private static String zeros(final int n) {
     if (n < 1) return "";
 
-    char[] buf = new char[n];
+    final char[] buf = new char[n];
 
     for (int i = 0; i < n; i++) {
       buf[i] = '0';
@@ -161,23 +161,23 @@ public class XNumber extends XObject {
   /** {@inheritDoc} */
   @Override
   public Object object() {
-    if (null == m_obj) setObject(new Double(m_val));
+    if (null == m_obj) setObject(Double.valueOf(m_val));
     return m_obj;
   }
 
   /** {@inheritDoc} */
   @Override
-  public boolean equals(XObject obj2) {
+  public boolean equals(final XObject obj2) {
 
     // In order to handle the 'all' semantics of
     // nodeset comparisons, we always call the
     // nodeset function.
-    int t = obj2.getType();
+    final int t = obj2.getType();
     try {
       if (t == XObject.CLASS_NODESET) return obj2.equals(this);
       else if (t == XObject.CLASS_BOOLEAN) return obj2.bool() == bool();
       else return m_val == obj2.num();
-    } catch (org.loboevolution.javax.xml.transform.TransformerException te) {
+    } catch (final javax.xml.transform.TransformerException te) {
       throw new WrappedRuntimeException(te);
     }
   }
@@ -190,7 +190,7 @@ public class XNumber extends XObject {
 
   /** {@inheritDoc} */
   @Override
-  public void callVisitors(XPathVisitor visitor) {
+  public void callVisitors(final XPathVisitor visitor) {
     visitor.visitNumberLiteral();
   }
 }
